# mdbook-svgbob

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: audit.yml  fmt.yml  release.yml  tests.yml
src/: cfg.rs  cli.rs  main.rs  preprocessor.rs  svgbob.rs
