[package]
name = "mdbook-svgbob"
version = "0.2.2"
authors = ["Alex Koz. <a@koz.email>"]
description = "SvgBob mdbook preprocessor which swaps code-blocks with neat SVG."
homepage = "https://nest.pijul.com/fzzr/mdbook-svgbob"
repository = "https://github.com/boozook/mdbook-svgbob.git"
keywords = ["mdbook", "markdown", "ascii", "svg", "bob"]
categories = ["command-line-utilities", "text-processing", "visualization"]

edition = "2021"

readme = "README.md"
license = "MPL-2.0"


[badges]
maintenance = { status = "passively-maintained" }


[dependencies]
mdbook = "0.4.52"
svgbob = "0.7.6"
svg = "0.18.0"

log = "0.4.27"
env_logger = "0.11.8"
semver = "1.0.26"

toml = "0.5.11"
serde_json = "1.0.149"
pulldown-cmark = "0.10.3"
pulldown-cmark-to-cmark = "14.0.1"

[dependencies.clap]
version = "4.5.42"
features = ["std", "derive", "cargo", "unicode", "error-context"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]
