[package]
name = "mdbook-svgbob"
version = "0.3.1"
authors = ["Alex Koz. <a@koz.email>"]
description = "SvgBob mdbook preprocessor which swaps code-blocks with neat SVG."
homepage = "https://nest.pijul.com/fzzr/mdbook-svgbob"
repository = "https://github.com/boozook/mdbook-svgbob.git"
keywords = ["mdbook", "markdown", "ascii", "svg", "bob"]
categories = ["command-line-utilities", "text-processing", "visualization"]

edition = "2024"

readme = "README.md"
license = "MPL-2.0"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
env_logger = "0.11.10"
log = "0.4.27"
mdbook-driver = "0.5.2"
mdbook-markdown = "0.5.2"
mdbook-preprocessor = "0.5.2"
mdbook-renderer = "0.5.2"
pulldown-cmark = "0.13.3"
pulldown-cmark-to-cmark = "22.0.0"
semver = "1.0.28"
serde_json = "1.0.149"
svg = "0.18.0"
svgbob = "0.7.6"
toml = "1.1.2"

[dependencies.clap]
version = "4.6.1"
features = ["std", "derive", "cargo", "unicode", "error-context"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]
